# bevy_tetris

./: Cargo.toml  LICENSE  README.md
assets/background/: background.blend1
assets/background/export/: background.gltf
assets/bottom_wall/: bottom_wall.blend1
assets/debug_cube/: debug_cube.blend
assets/test_scene/: test_scene.blend1
assets/tetronimo/: tetronimo.blend1
assets/tetronimo/export/: tetronimo.gltf
assets/wall/export/: wall.gltf.glb
src/: main.rs  resources.rs
src/assets/background/: background.blend
src/assets/background/export/: background.gltf
src/assets/bottom_wall/: bottom_wall.blend  bottom_wall.blend1
src/assets/bottom_wall/export/: bottom_wall.gltf
src/assets/debug_cube/: debug_cube.blend1
src/assets/debug_cube/export/: debug_cube.gltf
src/assets/test_scene/: test_scene.blend  test_scene.blend1
src/assets/tetronimo/: tetronimo.blend  tetronimo.blend1
src/assets/tetronimo/export/: tetronimo.glb  tetronimo.gltf
src/assets/wall/: wall.blend  wall.blend1
src/assets/wall/export/: wall.gltf
src/systems/: arena.rs  fall.rs  horizontal_movement.rs  lighting.rs  mod.rs  render.rs
