[package]
name = "bevy_tetris_3d"
version = "0.1.0"
authors = ["Victor <victor.r.rogers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
